# aoc2021

./: .gitignore  Cargo.toml  README.md
input/2020/: day4.txt  day5.txt
input/2021_SEGCC/: day24 reduced.txt
src/: day1.rs  day10.rs  day11.rs  day12.rs  day14.rs  day15.rs  day16.rs  day17.rs  day17_2020.rs  day19.rs  day2.rs  day21.rs  day22.rs  day23 manually.txt  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  dayN.rs  lib.rs  main debug.rs  main.rs
visualizations/: Day8_Rules.xlsx  day23 manually.txt  day23.xlsx  day23p2 manually.txt  day24_input_notes.txt
