[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Dan Thornton <dan.thornton+git@thornton.me>"]

[lib]
bench = false

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3"
aoc-runner-derive = "0.3.0"
crossterm = "0.22.1"
regex = "1"
lazy_static = "1.4"
num-integer = "0.1"
modinverse = "0.1"
ring-algorithm = "0.4"